# ArkanoidGame

./: Ball.cpp  Ball.h  BallDirections.h  BallMovement.cpp  BallMovement.h  BiggerPlatform.cpp  BiggerPlatform.h  BlockDestroyer.cpp  BlockDestroyer.h  Blocks.cpp  Blocks.h  Bonus.h  BonusInterface.h  BonusManager.cpp  BonusManager.h  CMakeLists.txt  DoubleBall.cpp  DoubleBall.h  FasterBall.cpp  FasterBall.h  GameOver.cpp  GameOver.h  Platform.cpp  Platform.h  Shooting.cpp  Shooting.h  ShootingBonus.cpp  ShootingBonus.h  SlowerBall.cpp  SlowerBall.h  SmallerPlatform.cpp  SmallerPlatform.h  main.cpp
